# CFA

./: .gitignore  .pre-commit-config.yaml  LedgerItem.py  README.md  builder.py  compound_interest_calculator.py  events.py  functional.py  main.py  pyproject.toml  requirements.txt  setup.cfg  simulate.py  simulation.py  simulation_procedures.py
SimCFA/: pyproject.toml
SimCFA/data/: example_simulation_config01.json  example_simulation_config02.json
SimCFA/src/SimCFA/: LedgerItem.py  compound_interest_calculator.py  configs.py  events.py  functional.py  simulation.py  simulation_procedures.py
