[tool.poetry]
name = "cfa"
version = "0.1.0"
description = ""
authors = ["kwatras <krzysztof.watras@axpo.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
simcfa = {path = "SimCFA", develop = true}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
extend-exclude = '''
/(
  | migrations
)/
'''
