[project]
name = "cfa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simcfa",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[tool.uv.sources]
simcfa = { path = "SimCFA", editable = true }

[tool.ruff]
builtins = ["_"]
target-version = "py310"
extend-exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.venv',
    'venv',
    '.tox',
    '.mypy_cache',
    '.pytest_cache',
    '*/migrations',
]
line-length = 120

[tool.ruff.format]
quote-style = "single"
